style/stylesheet.css
/* ... */
@media (max-width: 555px) { 
    .dropdown-options {
        right: 100px;
    }
    .main-nav > button {
        transform: translateY(40%);
    }
}




/* |||| MAIN FOOTER |||| */
footer {
    position: relative;
    background-color: var(--colour-brown);
    text-align: center;
    border-radius: 30px 30px 0 0;
    font-size: smaller;
}

.main-footer {
    display: flex;
    flex-flow: row wrap; 
    justify-content: space-between;
    align-items: flex-start;
}

.main-footer > .logo, .footer-links, .footer-social-links {
    margin-bottom: calc(var(--section-padding-spacing) * 1/2);
}

.main-footer > .footer-social-links {
    text-align: right; }
.main-footer > .footer-social-links > .flex-centered {
    border-radius: var(--rounded-border-size);
    padding-top: 0;
    padding-bottom: 0;
    height: 50px;
}

.footer-links {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-evenly;
    align-items: flex-start; 
}
.footer-links > .footer-link-section {
    margin: 10px;
    min-width: 165px;
    flex-basis: 0;
    text-align: left; 
}
.footer-links > .footer-link-section > ul > li {
    display: block;
    cursor: pointer;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.footer-legal {
    margin-top: var(--section-padding-spacing);
}

.footer-legal > p {
    display: block;
}
.footer-legal a {
    text-decoration: underline;
}

footer  .logo {
    z-index: 9;
}

@media (max-width: 1160px) and (min-width: 939px){
    .footer-links {
        margin-right: 203px;
    }
    .footer-social-links {
        margin-right: 100px
    }
}

@media (max-width: 939px) and (min-width: 914px){ 
    .footer-links {
        margin-right: 150px;
    }
    .footer-social-links {
        margin-right: 100px
    }
}

@media (max-width: 1141px) {
    .main-footer > .footer-social-links {
        text-align: left;
    }    
}

@media (max-width: 760px) and (min-width: 528px){
    .footer-links > .footer-link-section {
        min-width: 230px;
    }
}



/* |||| INDEX PAGE |||| */

/* ||| TITLE SECTION ||| */ 
.title-section {
    line-height: 0.9;
    margin-bottom: 0;
}

.section.home-title { 
    position: relative; 
    height: 860px;
    /* align section-content to left edge */
    padding-left: 20%;
    display: flex;
    justify-content: center;
    align-items: end;
}

.home-title > .section-content {
    position: relative; /* allows for abs pos of globe & home-title-graphic*/
    width: min(75%, 1050px);
    height: 650px;
    padding: 1.5rem; 
    padding-left: 15%;
    border-radius: var(--slight-rounded-border-size); 
    background-color: var(--colour-bg);
    /* align right all child elements in a column */
    display: flex;
    flex-flow: column nowrap;
    overflow: hidden;
    justify-content: space-between;
    overflow: visible;
}

/* style globe */ 
.home-title > .section-content > .img-container {
    position: absolute;
    left: 0;
    top: 6.5%;
    height: 565px; /*87% of section content height*/
    width: 565px; /* equal to height*/
    border-radius: 50%;
    background-color: var(--colour-green-3-transparent);
    transform: translateX(-50%);
    z-index: 2;
}
.home-title > .section-content > .img-container > img {
    padding-top: 4%;
    height: 96%;
}

.home-title .home-nav, .home-title .instagram-link {
    text-align: right;
}

/* style for home-nav */
.home-title > .section-content > .home-nav button {
    border-radius: 50%;
    padding: 7.5px; }
.home-title > .section-content > .home-nav .contained-img {
    margin: var(--element-spacing);
    width: 25px;
    height: 25px; }
.home-title > .section-content > .home-nav button:hover { /*!!! ADD LINK TO BUTTONS */ 
    /*background-color: var(--colour-green-3-transparent); !!! UNCOMMENT WHEN FUNCTIONALITY ADDED*/
    cursor: auto;
}

/* style for title text */
.home-title > .section-content > .home-title-text {
    text-align: left;
    margin-left: 140px;
    width: 420px;
} 
.home-title-text > h1 {
    line-height: normal;
}
.home-title-text span {
    color: var(--colour-green-2);
    display: block;
    font-weight: bold;
}

/* style for arrow graphic */
.home-title > .section-content > .home-title-graphic {
    position: absolute;
    top: 3rem;
    left: 50%;  }
.home-title-graphic > .right-arrow {
    transform: translate(calc(var(--vertical-line-height-1)/2), -3.5px) rotate(-45deg);
}
.home-title-graphic > .horizontal-line {
    transform: translateX(-50%);
    border-bottom: 3.5px solid black;
    border-radius: 2px 0 0 2px;

}

/* reduce spacing between text and globe */
@media (max-width: 1550px) {
    .home-title > .section-content > .home-title-text {
        margin-left: 180px;
        width: auto; /* title-text wraps when reaching maximum width*/ 
    }
}

/* remove display of globe image at smaller widths*/
@media (max-width: 1050px) { 
    .section.home-title { 
        padding: 5%;
    }
    .home-title > .section-content { 
        padding-left: 1.5rem;
    }
    .home-title > .section-content > .img-container {
        display: none; 
    }
    .home-title > .section-content > .home-title-text {
        align-self: center;
        margin-left: 10%;
        width: auto;
    } 
}

/* fix positioning for mobile */
@media (max-width: 700px) {
    /* left align arrow graphic to prevent overlapping of elements at smaller widths*/
    .home-title > .section-content > .home-title-graphic {
        left: 35%;
    }
    .home-title > .section-content {
        width: 95%;
        height: 500px;
    }
    .section.home-title {
        min-height: 620px;
        height: 500px;
        justify-content: center;
        
    }
}
/* ... */

